--- a/src/app/transakcija/transakcija.component.html
+++ b/src/app/transakcija/transakcija.component.html
@@ -1,4 +1,7 @@
 <div>
+    <label *ngIf="showCheckbox">
+      <input type="checkbox" />
+    </label>
     {{ item.id }}
     {{ item["beneficiary-name"] }}
     ({{ item.date }})
