--- a/src/app/finansijska-lista/finansijska-lista.component.html
+++ b/src/app/finansijska-lista/finansijska-lista.component.html
@@ -1,7 +1,8 @@
  <h2>Finansijski Pregled</h2>
+ <app-select-multiple-transactions></app-select-multiple-transactions>
     <ul>
       <li *ngFor="let item of transakcija" >
-        <app-transakcija [item]="item"></app-transakcija>
+        <app-transakcija [item]="item" [showCheckbox]="multiSelectOn" ></app-transakcija>
       </li>
     </ul>
     <app-paginacija></app-paginacija>
