--- a/src/app/cat-dialog-box/kat-dialog-box.component.html
+++ b/src/app/cat-dialog-box/kat-dialog-box.component.html
@@ -1,30 +1,27 @@
-<h2>Odaberi kategoriju i podkategoriju</h2>
+<mat-dialog-content class="dialog-content">
+  <h2 mat-dialog-title class="dialog-title">Odaberi kategoriju i podkategoriju</h2>
+  <div class="form-wrapper">
+    <mat-form-field appearance="outline" class="full-width">
+      <mat-label>Kategorija</mat-label>
+      <mat-select [(value)]="selectedCategory" (selectionChange)="onCategoryChange()">
+        <mat-option *ngFor="let cat of categories" [value]="cat">
+          {{ cat.name }}
+        </mat-option>
+      </mat-select>
+    </mat-form-field>
 
-<mat-form-field appearance="outline" class="full-width">
-  <mat-label>Kategorija</mat-label>
-  <mat-select [(value)]="selectedCategoryCode" (selectionChange)="onCategoryChange()">
-    <mat-option *ngFor="let cat of categories" [value]="cat.code">
-      {{ cat.name }} 
-    </mat-option>
-  </mat-select>
-</mat-form-field>
+    <mat-form-field appearance="outline" class="full-width" *ngIf="subcategories.length > 0">
+      <mat-label>Podkategorija</mat-label>
+      <mat-select [(value)]="selectedSubCategory">
+        <mat-option *ngFor="let sub of subcategories" [value]="sub">
+          {{ sub.name }}
+        </mat-option>
+      </mat-select>
+    </mat-form-field>
+  </div>
+</mat-dialog-content>
 
-<mat-form-field appearance="outline" class="full-width" *ngIf="subcategories.length > 0">
-  <mat-label>Podkategorija</mat-label>
-  <mat-select>
-    <mat-option *ngFor="let sub of subcategories" [value]="sub.code">
-      {{ sub.name }}
-    </mat-option>
-  </mat-select>
-</mat-form-field>
 <mat-dialog-actions align="end" class="button-row">
-  <button mat-button >Cancel</button>
-
-  <!-- Apply je primarno dugme; po želji ga onemogući dok nešto nije izabrano -->
-  <button
-    mat-raised-button
-    color="primary"
-  >
-    Apply
-  </button>
+  <button mat-button mat-dialog-close>Cancel</button>
+  <button mat-flat-button color="primary" [disabled]="!selectedCategory" (click)="aplly()">Apply</button>
 </mat-dialog-actions>
