--- a/src/app/spdialog-box/spdialog-box.component.scss
+++ b/src/app/spdialog-box/spdialog-box.component.scss
@@ -44,3 +44,10 @@
     }
   }
 }
+/* Ukloni WebKit spinner-e (Chrome, Safari, Edge) */
+:host ::ng-deep input[type=number]::-webkit-outer-spin-button,
+:host ::ng-deep input[type=number]::-webkit-inner-spin-button {
+  -webkit-appearance: none !important;
+  margin: 0 !important;
+}
+
